# eternal_memory

./: .gitignore  README.md  debug_init.py  pyproject.toml  restart.sh
.agent/rules/: chores-guide.md  file-guide.md  recommendation-guide.md
.agent/skills/my-skill/: SKILL.md
agent/: .gitignore  README.md  USER.example.md
docs/: memory_spec.md  ui_spec.md
examples/: embedding_providers.py
logs/: metrics_20260131.jsonl  metrics_20260201.jsonl
scripts/: backfill_categories.py  install.sh  migrate_importance.py  migrate_triples.py  run.sh  setup.sh  test_llm.py  test_smart_categorization.py
setting/: .env.example
src/eternal_memory/: __init__.py  config.py
src/eternal_memory/agent/: __init__.py  user_model.py
src/eternal_memory/api/: __init__.py  main.py
src/eternal_memory/database/: __init__.py  repository.py  schema.py
src/eternal_memory/engine/: __init__.py  base.py  context_pruner.py  memory_engine.py
src/eternal_memory/llm/: __init__.py  base.py  client.py  gemini_provider.py  openai_provider.py
src/eternal_memory/models/: __init__.py  memory_item.py  retrieval.py  (+1 more)
tests/: test_batch_embedding.py  test_batch_performance_mock.py  test_buffer_persistence.py  test_daily_reflection_unit.py  test_embedding_cache.py  test_engine.py  test_engine_unit.py  test_flush_unit.py  test_hooks.py  test_jobs_unit.py  test_llm_unit.py  test_models.py  test_reinforcement.py  test_repository_unit.py  test_sanitizer.py  test_scheduler_unit.py  test_vault.py  verify_memory_storage.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
(+35 files in other folders)
